--- a/notebooks/2.1.build.train.eval.lstm.economic.indicators.monthly.ipynb
+++ b/notebooks/2.1.build.train.eval.lstm.economic.indicators.monthly.ipynb
@@ -763,25 +763,25 @@
      "text": [
       "Train on 304 samples, validate on 71 samples\n",
       "Epoch 1/10\n",
-      "304/304 [==============================] - 2s 6ms/step - loss: 0.1794 - val_loss: 0.2734\n",
+      "304/304 [==============================] - 1s 4ms/step - loss: 0.1676 - val_loss: 0.2295\n",
       "Epoch 2/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0436 - val_loss: 0.0596\n",
+      "304/304 [==============================] - 0s 611us/step - loss: 0.0488 - val_loss: 0.0685\n",
       "Epoch 3/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0390 - val_loss: 0.0366\n",
+      "304/304 [==============================] - 0s 640us/step - loss: 0.0465 - val_loss: 0.0452\n",
       "Epoch 4/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0203 - val_loss: 0.0175\n",
+      "304/304 [==============================] - 0s 529us/step - loss: 0.0296 - val_loss: 0.0230\n",
       "Epoch 5/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0112 - val_loss: 0.0085\n",
+      "304/304 [==============================] - 0s 559us/step - loss: 0.0183 - val_loss: 0.0100\n",
       "Epoch 6/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0057 - val_loss: 0.0045\n",
+      "304/304 [==============================] - 0s 598us/step - loss: 0.0095 - val_loss: 0.0038\n",
       "Epoch 7/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0029 - val_loss: 0.0031\n",
+      "304/304 [==============================] - 0s 595us/step - loss: 0.0039 - val_loss: 0.0018\n",
       "Epoch 8/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 0.0016 - val_loss: 0.0026\n",
+      "304/304 [==============================] - 0s 581us/step - loss: 0.0017 - val_loss: 0.0015\n",
       "Epoch 9/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 8.9367e-04 - val_loss: 0.0023\n",
+      "304/304 [==============================] - 0s 592us/step - loss: 0.0012 - val_loss: 0.0015\n",
       "Epoch 10/10\n",
-      "304/304 [==============================] - 0s 1ms/step - loss: 6.4711e-04 - val_loss: 0.0019\n"
+      "304/304 [==============================] - 0s 516us/step - loss: 0.0011 - val_loss: 0.0011\n"
      ]
     }
    ],
@@ -805,9 +805,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:reb]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-reb-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
