Add target indices

--- a/notebooks/2.3.build.train.eval.lstm.economic.indicators.monthly.ipynb
+++ b/notebooks/2.3.build.train.eval.lstm.economic.indicators.monthly.ipynb
@@ -583,8 +583,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set index for target variable to predict\n",
-    "index_target = 15"
+    "# USRECM: NBER based Recession Indicators for the United States from the Peak through the Trough\n",
+    "# index_target = NA\n",
+    "\n",
+    "# GDPC1: Real Gross Domestic Product\n",
+    "# index_target = NA\n",
+    "\n",
+    "# W875RX1: Real personal income excluding current transfer receipts\n",
+    "index_target = 13\n",
+    "\n",
+    "# PAYEMS: All Employees: Total Nonfarm Payrolls\n",
+    "index_target = 0\n",
+    "\n",
+    "# INDPRO: Industrial Production Index\n",
+    "index_target = 12\n",
+    "\n",
+    "# CMRMTSPL: Real Manufacturing and Trade Industries Sales\n"
    ]
   },
   {
@@ -898,8 +912,8 @@
     "n_train, n_ = train_values.shape\n",
     "n_valid, n_ = valid_values.shape\n",
     "n_observations = n_lags * n_variables\n",
-    "x_train, y_train = train_values[:, :n_observations], train_values[:, n_observations+index_target:n_:n_variables]\n",
-    "x_valid, y_valid = valid_values[:, :n_observations], valid_values[:, n_observations+index_target:n_:n_variables]\n",
+    "x_train, y_train = train_values[:, :n_observations], train_values[:, n_observations+index_target-1:n_:n_variables]\n",
+    "x_valid, y_valid = valid_values[:, :n_observations], valid_values[:, n_observations+index_target-1:n_:n_variables]\n",
     "print(f\"Train Inputs Shape: {x_train.shape}, Train Targets Shape: {y_train.shape}\")\n",
     "print(f\"Valid Inputs Shape: {x_valid.shape}, Valid Targets Shape: {y_valid.shape}\")"
    ]
