--- a/notebooks/1.1.prep.data.economic.indicators.monthly.ipynb
+++ b/notebooks/1.1.prep.data.economic.indicators.monthly.ipynb
@@ -846,8 +846,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ffname = os.path.join(ROOT_DIR, \"reb\", \"data\", \"ext\", \"data_monthly_processed.csv\")\n",
-    "df.to_csv(ffname)"
+    "# ffname = os.path.join(ROOT_DIR, \"reb\", \"data\", \"ext\", \"data_monthly_processed.csv\")\n",
+    "# df.to_csv(ffname)"
    ]
   },
   {
@@ -880,9 +880,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:reb]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-reb-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
