--- a/notebooks/2.1.build.train.eval.lstm.economic.indicators.monthly.ipynb
+++ b/notebooks/2.1.build.train.eval.lstm.economic.indicators.monthly.ipynb
@@ -1844,9 +1844,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:reb]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-reb-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
