Update ML-Keras pipeline

--- a/notebooks/3.2.forecast.lstm.economic.indicators.monthly.ipynb
+++ b/notebooks/3.2.forecast.lstm.economic.indicators.monthly.ipynb
@@ -266,10 +266,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rescale data\n",
-    "all_values = df.values.astype(\"float32\")\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "all_values_scaled = scaler.fit_transform(all_values)\n",
+    "# load scaler\n",
+    "ffname = os.path.join(ROOT_DIR, \"reb\", \"data\", \"int\", \"monthly.scaler.save\")\n",
+    "scaler = joblib.load(ffname)\n",
     "\n",
     "# USRECM: NBER based Recession Indicators for the United States from the Peak through the Trough\n",
     "# index_target = NA\n",
@@ -298,11 +297,7 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# load scaler\n",
-    "ffname = os.path.join(ROOT_DIR, \"reb\", \"data\", \"int\", \"monthly.scaler.save\")\n",
-    "scaler = joblib.load(ffname)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -856,6 +851,33 @@
     "        \"predict\": [{\"t\": t, \"x\": x} for t, x in zip(list(df_forecast.index.astype(str).values),\n",
     "                                     df_forecast.VALUE.astype(\"float32\"))]}\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2', '3']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"2,3\".split(\",\")"
    ]
   },
   {
